# ai_functional_testing

./: README.md  analyze_pod_logs.py
.github/: BUG-TEMPLATE-GUIDE.md  TEST-CASE-FIX-PROCESS.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug-report.md  template_template.md  test-case-fix.md
.github/workflows/: test-case-fix-automation.yml
arcgis-velocity-mcp/: .gitignore  Dockerfile  QUICKSTART.md  README.md  docker-compose.yml  pyproject.toml  test_auth.py
arcgis-velocity-mcp/arcgis_velocity_mcp/: __init__.py  __main__.py  config.py  mcp_server.py  velocity_client.py
testrail-mcp/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
testrail-mcp/testrail_mcp/: mcp_server.py  testrail_client.py
